--- a/ConfiguracionUsuarios/ComponentesUserControl.xaml
+++ b/ConfiguracionUsuarios/ComponentesUserControl.xaml
@@ -120,6 +120,14 @@
                         </ContextMenu>
                     </DataGrid.ContextMenu>
                 </DataGrid>
+                <Button
+                  Grid.Column="2"
+                  Grid.Row="1"
+                  Command="{Binding RunExtendedDialogCommand}"
+                  Width="128"
+                  Margin="0 32 0 0">
+                  EXTENDED
+                </Button>
             </Grid>
         </materialDesign:TransitioningContent>
     </Grid>
