--- a/ConfiguracionUsuarios/SupaWindow.xaml
+++ b/ConfiguracionUsuarios/SupaWindow.xaml
@@ -163,15 +163,17 @@
                         </TransformGroup>
                     </Grid.RenderTransform>
 
-                    <Button x:Name="ButtonOpenMenu" Height="20" Margin="5" HorizontalAlignment="Right" VerticalAlignment="Top" Style="{StaticResource MaterialDesignFloatingActionMiniAccentButton}" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="#FF31577E" Click="ButtonOpenMenu_Click">
+                    <Button x:Name="ButtonOpenMenu" Height="26" Margin="5" HorizontalAlignment="Right" VerticalAlignment="Top" Style="{StaticResource MaterialDesignFloatingActionMiniAccentButton}" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="#FF31577E" Click="ButtonOpenMenu_Click">
                         <materialDesign:PackIcon Kind="Menu" Width="18" Height="18"/>
                     </Button>
                     <Button x:Name="ButtonCloseMenu" Visibility="Collapsed" Height="20" Margin="5" HorizontalAlignment="Right" VerticalAlignment="Top" Style="{StaticResource MaterialDesignFloatingActionMiniAccentButton}" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="#FF31577E" Click="ButtonCloseMenu_Click">
                         <materialDesign:PackIcon Kind="ArrowLeft" Width="18" Height="18"/>
                     </Button>
-                    <ToggleButton Height="16" Width="38" VerticalAlignment="Bottom" HorizontalAlignment="Left" Margin="5">
-                        
-                    </ToggleButton>
+                    <materialDesign:PackIcon Kind="MoonAndStars" VerticalAlignment="Bottom" HorizontalAlignment="Left" Margin="2,0,0,2" Width="12"/>
+                    <materialDesign:PackIcon Kind="WbSunny" VerticalAlignment="Bottom" HorizontalAlignment="Left" Margin="36,0,0,2" Width="12"/>
+                    <ToggleButton Height="12" Width="20" VerticalAlignment="Bottom" HorizontalAlignment="Left" Margin="15,0,0,4" Click="ToggleButton_Click"/>
+
+
 
                     <!--<Image Height="80" VerticalAlignment="Bottom"/>-->
 
