--- a/ConfiguracionUsuarios/ComponentesUserControl.xaml
+++ b/ConfiguracionUsuarios/ComponentesUserControl.xaml
@@ -15,9 +15,7 @@
                     <RowDefinition Height="*"/>
                 </Grid.RowDefinitions>
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition/>
-                    <ColumnDefinition/>
-                    <ColumnDefinition/>
+
                 </Grid.ColumnDefinitions>
                 <Grid Background="#FF31577E" Grid.Row="0" Grid.ColumnSpan="2" Margin="0">
                     <ListView x:Name="ListViewMenu" Height="{Binding ElementName=SupaWindows, Path=Height}" Foreground="#FF5C99D6" Background="Transparent" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Disabled">
@@ -35,15 +33,17 @@
                         </StackPanel>
                     </ListView>
                 </Grid>
-                <DataGrid Name="dgUsuarios" AutoGenerateColumns="False" FontFamily="Consolas" FontSize="14"  ColumnWidth="*" SelectionMode="Single" VerticalScrollBarVisibility="Visible" Margin="0" Padding="0,0,0,0" Grid.Row="1">
+                <DataGrid Name="dgComponentes" AutoGenerateColumns="False" FontFamily="Consolas" FontSize="14"  ColumnWidth="*" SelectionMode="Single" VerticalScrollBarVisibility="Visible" Margin="0" Padding="0,0,0,0" Grid.Row="1">
                     <DataGrid.Resources>
                     </DataGrid.Resources>
                     <DataGrid.Columns>
                         <DataGridTextColumn Header="ARTICULO" Binding="{Binding ArticuloComponente}"/>
-                        <DataGridTextColumn Header="CATEGORIA" Binding="{Binding CategoriaComponente}"/>
                         <DataGridTextColumn Header="NOMBRE" Binding="{Binding NombreComponente}"/>
-                        <DataGridTextColumn Header="VERSION" Binding="{Binding CategoriaComponente}"/>
-                        <DataGridTextColumn Header="ORDEN" Binding="{Binding CategoriaComponente}"/>
+                        <DataGridTextColumn Header="CATEGORIA" Binding="{Binding NombreCategoria}"/>
+                        <DataGridTextColumn Header="PRODUCTO" Binding="{Binding NombreProducto}"/>
+                        <DataGridTextColumn Header="MODELO" Binding="{Binding NombreModelo}"/>
+                        <DataGridTextColumn Header="VERSION" Binding="{Binding VersionComponente}"/>
+                        <DataGridTextColumn Header="ORDEN" Binding="{Binding CodigoOrden}"/>
                     </DataGrid.Columns>
                     <DataGrid.ContextMenu>
                         <ContextMenu>
@@ -77,57 +77,6 @@
                         </ContextMenu>
                     </DataGrid.ContextMenu>
                 </DataGrid>
-
-                <DataGrid Name="dgUsuarios2" Grid.Column="1" AutoGenerateColumns="False" FontFamily="Consolas" FontSize="14"  ColumnWidth="*" SelectionMode="Single" VerticalScrollBarVisibility="Visible" Margin="0" Padding="0,0,0,0" Grid.Row="1">
-                    <DataGrid.Resources>
-                    </DataGrid.Resources>
-                    <DataGrid.Columns>
-                        <DataGridTextColumn Header="ARTICULO" Binding="{Binding ArticuloComponente}"/>
-                        <DataGridTextColumn Header="CATEGORIA" Binding="{Binding CategoriaComponente}"/>
-                        <DataGridTextColumn Header="NOMBRE" Binding="{Binding NombreComponente}"/>
-                        <DataGridTextColumn Header="VERSION" Binding="{Binding CategoriaComponente}"/>
-                        <DataGridTextColumn Header="ORDEN" Binding="{Binding CategoriaComponente}"/>
-                    </DataGrid.Columns>
-                    <DataGrid.ContextMenu>
-                        <ContextMenu>
-                            <MenuItem x:Name="ctxmnuEditarusuario2"  Header="Editar datos" InputGestureText="Ctrl+E">
-                                <MenuItem.Icon>
-                                    <Image Source="/ConfiguracionUsuarios;component/Resources/lapiz_16x16.ico"/>
-                                </MenuItem.Icon>
-                            </MenuItem>
-                            <MenuItem x:Name="ctxmnuEditarPermisos2"  Header="Editar Permisos" InputGestureText="Ctrl+E">
-                                <MenuItem.Icon>
-                                    <Image Source="/ConfiguracionUsuarios;component/Resources/lapiz_16x16.ico"/>
-                                </MenuItem.Icon>
-                            </MenuItem>
-                            <Separator/>
-                            <MenuItem x:Name="ctxmnuResetPassword2"  Header="Blanquear Password" InputGestureText="Ctrl+E">
-                                <MenuItem.Icon>
-                                    <Image Source="/ConfiguracionUsuarios;component/Resources/lapiz_16x16.ico"/>
-                                </MenuItem.Icon>
-                            </MenuItem>
-                            <MenuItem x:Name="ctxmnuResetRFID2"  Header="Blanquear RFID" InputGestureText="Ctrl+E">
-                                <MenuItem.Icon>
-                                    <Image Source="/ConfiguracionUsuarios;component/Resources/lapiz_16x16.ico"/>
-                                </MenuItem.Icon>
-                            </MenuItem>
-                            <Separator/>
-                            <MenuItem x:Name="ctxmnuEliminarUsuario2"  Header="Activar/Desactivar" InputGestureText="Ctrl+E">
-                                <MenuItem.Icon>
-                                    <Image Source="/ConfiguracionUsuarios;component/Resources/quitar_16x16.ico"/>
-                                </MenuItem.Icon>
-                            </MenuItem>
-                        </ContextMenu>
-                    </DataGrid.ContextMenu>
-                </DataGrid>
-                <Button
-                  Grid.Column="2"
-                  Grid.Row="1"
-                  Command="{Binding RunExtendedDialogCommand}"
-                  Width="128"
-                  Margin="0 32 0 0">
-                  EXTENDED
-                </Button>
             </Grid>
         </materialDesign:TransitioningContent>
     </Grid>
