--- a/ConfiguracionUsuarios/LoginControl.xaml
+++ b/ConfiguracionUsuarios/LoginControl.xaml
@@ -7,7 +7,7 @@
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              mc:Ignorable="d" 
              d:DesignHeight="600" d:DesignWidth="800">
-            <materialDesign:TransitioningContent x:Name="TrainsitionigContentSlide" OpeningEffect="{materialDesign:TransitionEffect SlideInFromLeft, Duration=0:0:0.3}">
+            <!--<materialDesign:TransitioningContent x:Name="TrainsitionigContentSlide" OpeningEffect="{materialDesign:TransitionEffect SlideInFromLeft, Duration=0:0:0.3}">-->
         <Grid VerticalAlignment="Center" FocusManager.FocusedElement="{Binding ElementName=tbLegajo}">
             <Grid.RowDefinitions>
                 <RowDefinition Height="*"/>
@@ -22,5 +22,5 @@
             </Button>
 
     </Grid>
-        </materialDesign:TransitioningContent>
+        <!--</materialDesign:TransitioningContent>-->
 </UserControl>
