--- a/ConfiguracionUsuarios/SupaWindow.xaml
+++ b/ConfiguracionUsuarios/SupaWindow.xaml
@@ -163,23 +163,30 @@
                         </TransformGroup>
                     </Grid.RenderTransform>
 
-                    <Button x:Name="ButtonOpenMenu" Height="26" Margin="5" HorizontalAlignment="Right" VerticalAlignment="Top" Style="{StaticResource MaterialDesignFloatingActionMiniAccentButton}" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="#FF31577E" Click="ButtonOpenMenu_Click">
-                        <materialDesign:PackIcon Kind="Menu" Width="18" Height="18"/>
+                    <Button x:Name="ButtonOpenMenu" Height="36" Margin="5" HorizontalAlignment="Right" VerticalAlignment="Center" Style="{StaticResource MaterialDesignFloatingActionMiniAccentButton}" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="#FF31577E" Click="ButtonOpenMenu_Click">
+                        <materialDesign:PackIcon Kind="Menu" Width="28" Height="28"/>
                     </Button>
-                    <Button x:Name="ButtonCloseMenu" Visibility="Collapsed" Height="20" Margin="5" HorizontalAlignment="Right" VerticalAlignment="Top" Style="{StaticResource MaterialDesignFloatingActionMiniAccentButton}" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="#FF31577E" Click="ButtonCloseMenu_Click">
-                        <materialDesign:PackIcon Kind="ArrowLeft" Width="18" Height="18"/>
+                    <Button x:Name="ButtonCloseMenu" Visibility="Collapsed" Height="36" Margin="5" HorizontalAlignment="Right" VerticalAlignment="Center" Style="{StaticResource MaterialDesignFloatingActionMiniAccentButton}" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="#FF31577E" Click="ButtonCloseMenu_Click">
+                        <materialDesign:PackIcon Kind="ArrowLeft" Width="28" Height="28"/>
                     </Button>
-                    <materialDesign:PackIcon Kind="MoonAndStars" VerticalAlignment="Bottom" HorizontalAlignment="Left" Margin="2,0,0,2" Width="12"/>
-                    <materialDesign:PackIcon Kind="WbSunny" VerticalAlignment="Bottom" HorizontalAlignment="Left" Margin="36,0,0,2" Width="12"/>
-                    <ToggleButton Height="12" Width="20" VerticalAlignment="Bottom" HorizontalAlignment="Left" Margin="15,0,0,4" Click="ToggleButton_Click"/>
+                    
 
 
 
                     <!--<Image Height="80" VerticalAlignment="Bottom"/>-->
 
                 </Grid>
+                
+                
 
                 <ListView x:Name="ListViewMenu" Height="{Binding ElementName=SupaWindows, Path=Height}" Foreground="#FF5C99D6" Background="Transparent" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Disabled" SelectionChanged="ListViewMenu_SelectionChanged">
+
+                    <ListViewItem x:Name="LightOn" Height="50" HorizontalAlignment="Stretch">
+                        <StackPanel Orientation="Vertical">
+                            <materialDesign:PackIcon Kind="WbSunny" HorizontalAlignment="Center" Margin="0" Width="12"/>
+                            <ToggleButton Height="12" Width="32" HorizontalAlignment="Center" Margin="0" Click="ToggleButton_Click"/>
+                        </StackPanel>
+                    </ListViewItem>
                     <ListViewItem x:Name="Login" Height="50">
                         <StackPanel Orientation="Horizontal">
                             <materialDesign:PackIcon Kind="LoginVariant" Height="25" Width="25" Margin="5"/>
@@ -240,7 +247,7 @@
                             <TextBlock Text="Home" VerticalAlignment="Center" Margin="25 10"/>
                         </StackPanel>
                     </ListViewItem>
-                    <ListViewItem x:Name="ItemHome6" Height="50">
+                    <!--<ListViewItem x:Name="ItemHome6" Height="50">
                         <StackPanel Orientation="Horizontal">
                             <materialDesign:PackIcon Kind="Golf" Height="25" Width="25" Margin="5"/>
                             <TextBlock Text="Home" VerticalAlignment="Center" Margin="25 10"/>
@@ -329,7 +336,7 @@
                             <materialDesign:PackIcon Kind="Zwave" Height="25" Width="25" Margin="5"/>
                             <TextBlock Text="Home" VerticalAlignment="Center" Margin="25 10"/>
                         </StackPanel>
-                    </ListViewItem>
+                    </ListViewItem>-->
                 </ListView>
 
             </StackPanel>
