--- a/ConfiguracionUsuarios/SupaWindow.xaml
+++ b/ConfiguracionUsuarios/SupaWindow.xaml
@@ -169,28 +169,22 @@
                     <Button x:Name="ButtonCloseMenu" Visibility="Collapsed" Height="36" Margin="5" HorizontalAlignment="Right" VerticalAlignment="Center" Style="{StaticResource MaterialDesignFloatingActionMiniAccentButton}" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="#FF31577E" Click="ButtonCloseMenu_Click">
                         <materialDesign:PackIcon Kind="ArrowLeft" Width="28" Height="28"/>
                     </Button>
-                    
-
-
-
                     <!--<Image Height="80" VerticalAlignment="Bottom"/>-->
-
                 </Grid>
-                
-                
+                <Grid>
+                    <StackPanel Orientation="Horizontal" Background="LightGray">
+                            <materialDesign:PackIcon Kind="WbSunny" HorizontalAlignment="Left" Margin="5,0,0,0" Width="12"/>
+                            <ToggleButton Height="12" Width="32" HorizontalAlignment="Left" Margin="0" Click="ToggleButton_Click"/>
+                        </StackPanel>
+                    
+                </Grid>
 
                 <ListView x:Name="ListViewMenu" Height="{Binding ElementName=SupaWindows, Path=Height}" Foreground="#FF5C99D6" Background="Transparent" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Disabled" SelectionChanged="ListViewMenu_SelectionChanged">
 
-                    <ListViewItem x:Name="LightOn" Height="50" HorizontalAlignment="Stretch">
-                        <StackPanel Orientation="Vertical">
-                            <materialDesign:PackIcon Kind="WbSunny" HorizontalAlignment="Center" Margin="0" Width="12"/>
-                            <ToggleButton Height="12" Width="32" HorizontalAlignment="Center" Margin="0" Click="ToggleButton_Click"/>
-                        </StackPanel>
-                    </ListViewItem>
                     <ListViewItem x:Name="Login" Height="50">
                         <StackPanel Orientation="Horizontal">
                             <materialDesign:PackIcon Kind="LoginVariant" Height="25" Width="25" Margin="5"/>
-                            <TextBlock Text="Configuarción" VerticalAlignment="Center" Margin="25 10"/>
+                            <TextBlock Text="Login" VerticalAlignment="Center" Margin="25 10"/>
                         </StackPanel>
                     </ListViewItem>
                     <ListViewItem x:Name="ItemCreate" Height="50">
@@ -199,42 +193,70 @@
                             <TextBlock Text="Pedidos" VerticalAlignment="Center" Margin="25 10"/>
                         </StackPanel>
                     </ListViewItem>
+                    <ListViewItem Height="50" x:Name="Autorizaciones">
+                        <StackPanel Orientation="Horizontal">
+                            <materialDesign:PackIcon Kind="CheckBox" Height="25" Width="25" Margin="5"/>
+                            <TextBlock Text="Autorizaciones" VerticalAlignment="Center"  Margin="25 10"/>
+                        </StackPanel>
+                    </ListViewItem>
+
+                    <ListViewItem Height="50" x:Name="Linea">
+                        <StackPanel Orientation="Horizontal">
+                            <materialDesign:PackIcon Kind="Factory" Height="25" Width="25" Margin="5"/>
+                            <TextBlock Text="Producción" VerticalAlignment="Center"  Margin="25 10"/>
+                        </StackPanel>
+                    </ListViewItem>
                     <ListViewItem x:Name="ItemHome" Height="50">
                         <StackPanel Orientation="Horizontal">
                             <materialDesign:PackIcon Kind="Users" Height="25" Width="25" Margin="5"/>
                             <TextBlock Text="Usuarios" VerticalAlignment="Center" Margin="25 10"/>
                         </StackPanel>
                     </ListViewItem>
+                    <ListViewItem Height="50" x:Name="ProdModFall">
+                        <StackPanel Orientation="Horizontal">
+                            <materialDesign:PackIcon Kind="Puzzle" Height="25" Width="25" Margin="5"/>
+                            <TextBlock Text="Componentes" VerticalAlignment="Center"  Margin="25 10"/>
+                        </StackPanel>
+                    </ListViewItem>
+                    <ListViewItem x:Name="Insumos" Height="50">
+                        <StackPanel Orientation="Horizontal">
+                            <materialDesign:PackIcon Kind="TicketConfirmation" Height="25" Width="25" Margin="5"/>
+                            <TextBlock Text="Insumos" VerticalAlignment="Center" Margin="25 10"/>
+                        </StackPanel>
+                    </ListViewItem>
+                    <ListViewItem x:Name="Despacho" Height="50">
+                        <StackPanel Orientation="Horizontal">
+                            <materialDesign:PackIcon Kind="ComputerClassic" Height="25" Width="25" Margin="5"/>
+                            <TextBlock Text="Hardware" VerticalAlignment="Center" Margin="25 10"/>
+                        </StackPanel>
+                    </ListViewItem>
                     <ListViewItem x:Name="Piezas" Height="50">
                         <StackPanel Orientation="Horizontal">
-                            <materialDesign:PackIcon Kind="Ticket" Height="25" Width="25" Margin="5"/>
+                            <materialDesign:PackIcon Kind="Harddisk" Height="25" Width="25" Margin="5"/>
                             <TextBlock Text="Piezas" VerticalAlignment="Center"  Margin="25 10"/>
                         </StackPanel>
                     </ListViewItem>
-                    <ListViewItem Height="50" x:Name="ProdModFall">
-                        <StackPanel Orientation="Horizontal">
-                            <materialDesign:PackIcon Kind="Message" Height="25" Width="25" Margin="5"/>
-                            <TextBlock Text="ProModFall" VerticalAlignment="Center"  Margin="25 10"/>
-                        </StackPanel>
-                    </ListViewItem>
-                    <ListViewItem x:Name="ItemHome1" Height="50">
-                        <StackPanel Orientation="Horizontal">
-                            <materialDesign:PackIcon Kind="AccountKey" Height="25" Width="25" Margin="5"/>
-                            <TextBlock Text="Autorizaciones" VerticalAlignment="Center" Margin="25 10"/>
-                        </StackPanel>
-                    </ListViewItem>
+
                     <ListViewItem x:Name="ItemHome2" Height="50">
                         <StackPanel Orientation="Horizontal">
-                            <materialDesign:PackIcon Kind="StarOff" Height="25" Width="25" Margin="5"/>
-                            <TextBlock Text="Home" VerticalAlignment="Center" Margin="25 10"/>
+                            <materialDesign:PackIcon Kind="FileDocumentBoxMultiple" Height="25" Width="25" Margin="5"/>
+                            <TextBlock Text="Registros" VerticalAlignment="Center" Margin="25 10"/>
                         </StackPanel>
                     </ListViewItem>
+
+
+
+
                     <ListViewItem x:Name="ItemHome3" Height="50">
                         <StackPanel Orientation="Horizontal">
-                            <materialDesign:PackIcon Kind="SquareRoot" Height="25" Width="25" Margin="5"/>
-                            <TextBlock Text="Home" VerticalAlignment="Center" Margin="25 10"/>
+                            <materialDesign:PackIcon Kind="ChartAreaspline" Height="25" Width="25" Margin="5"/>
+                            <TextBlock Text="Estadisticas" VerticalAlignment="Center" Margin="25 10"/>
                         </StackPanel>
                     </ListViewItem>
+                    
+                    
+                    
+                    <!--</ListViewItem>
                     <ListViewItem x:Name="ItemHome4" Height="50">
                         <StackPanel Orientation="Horizontal">
                             <materialDesign:PackIcon Kind="ZipDisk" Height="25" Width="25" Margin="5"/>
@@ -246,7 +268,7 @@
                             <materialDesign:PackIcon Kind="Laptop" Height="25" Width="25" Margin="5"/>
                             <TextBlock Text="Home" VerticalAlignment="Center" Margin="25 10"/>
                         </StackPanel>
-                    </ListViewItem>
+                    </ListViewItem>-->
                     <!--<ListViewItem x:Name="ItemHome6" Height="50">
                         <StackPanel Orientation="Horizontal">
                             <materialDesign:PackIcon Kind="Golf" Height="25" Width="25" Margin="5"/>
